// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL lcYpuI"
  >
    <div
      class="sc-bcXGCL lcYpuI"
    >
      <a
        class="sc-bcXGCL fOGmNq cap-link"
        href="/projects"
      >
        Project list
      </a>
      <span
        class="sc-bcXGCL hlIIDU cap-text"
      >
        /
      </span>
    </div>
    <div
      class="sc-bcXGCL lcYpuI"
    >
      <p
        class="sc-bcXGCL hHORdi cap-text"
      >
        New Project
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    class="sc-bcXGCL lcYpuI"
  >
    <div
      class="sc-bcXGCL lcYpuI"
    >
      <p
        class="sc-bcXGCL hHORdi cap-text"
      >
        Project list
      </p>
    </div>
  </div>
</DocumentFragment>
`;
